force-app/main/default/objects/Station_Unit__c/Station_Unit__c.object-meta.xml
<CustomObject>
    <label>İstasyon Ünitesi</label>
    <pluralLabel>İstasyon Üniteleri</pluralLabel>
    <nameField>
        <label>Ünite No</label>
        <type>AutoNumber</type>
        <displayFormat>SU-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Individual charging units at stations</description>
</CustomObject>