force-app/main/default/objects/Station_Unit__c/fields/Commissioning_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Date__c</fullName>
    <label>Devreye Alınma</label>
    <type>Date</type>
</CustomField>