force-app/main/default/objects/Station_Unit__c/fields/Connector_Name__c.field-meta.xml
<CustomField>
    <fullName>Connector_Name__c</fullName>
    <label>Konnektör Adı</label>
    <type>Text</type>
    <length>100</length>
</CustomField>