force-app/main/default/objects/Station_Unit__c/fields/Last_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Maintenance_Date__c</fullName>
    <label>Son Bakım</label>
    <type>Date</type>
</CustomField>