force-app/main/default/objects/Station_Unit__c/fields/Planned_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Maintenance_Date__c</fullName>
    <label>Planlı Bakım</label>
    <type>Date</type>
</CustomField>