force-app/main/default/objects/Station_Unit__c/fields/PYP_Code__c.field-meta.xml
<CustomField>
    <fullName>PYP_Code__c</fullName>
    <label>PYP Kodu</label>
    <type>Text</type>
    <length>50</length>
</CustomField>