force-app/main/default/objects/Station_Unit__c/fields/Related_Station__c.field-meta.xml
<CustomField>
    <fullName>Related_Station__c</fullName>
    <label>İlgili İstasyon</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Station_Units</relationshipName>
    <required>true</required>
</CustomField>