force-app/main/default/objects/Station_Unit__c/fields/Socket_Number_QR__c.field-meta.xml
<CustomField>
    <fullName>Socket_Number_QR__c</fullName>
    <label>Soket No (QR)</label>
    <type>Text</type>
    <length>100</length>
</CustomField>