force-app/main/default/objects/Station_Unit__c/fields/Unit_Brand__c.field-meta.xml
<CustomField>
    <fullName>Unit_Brand__c</fullName>
    <label>Ünite Markası</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Zenova</fullName><default>false</default><label>Zenova</label></value>
            <value><fullName>Diğer</fullName><default>false</default><label>Diğer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>