force-app/main/default/objects/Station_Unit__c/fields/Unit_Power__c.field-meta.xml
<CustomField>
    <fullName>Unit_Power__c</fullName>
    <label>Ünite Gücü</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>11</fullName><default>false</default><label>11</label></value>
            <value><fullName>22</fullName><default>false</default><label>22</label></value>
            <value><fullName>60</fullName><default>false</default><label>60</label></value>
            <value><fullName>120</fullName><default>false</default><label>120</label></value>
            <value><fullName>180</fullName><default>false</default><label>180</label></value>
            <value><fullName>240</fullName><default>false</default><label>240</label></value>
            <value><fullName>360</fullName><default>false</default><label>360</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>