force-app/main/default/objects/Station_Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Ünite Tipi</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AC</fullName><default>false</default><label>AC</label></value>
            <value><fullName>DC</fullName><default>false</default><label>DC</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>